--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>case003</module>
         <module>case004</module>
         <module>case005</module>
+        <module>case006</module>
     </modules>
 
     <developers>
